--- a/novilie/package.json
+++ b/novilie/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-star-rating": "^1.6.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
