--- a/novilie/package.json
+++ b/novilie/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "firebase": "^5.8.1",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.6.1"
@@ -16,7 +17,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
